# wxconfig

./: README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: definitions.py
src/wxconfig/: __init__.py  wxconfiggui.py
test/: test_config.py  testconfigmeta.yaml
tests/: test_config.py
wxconfig/: config.py  wxconfiggui.py
