[metadata]
name = wxconfig
version = v1.3
author = Jamie Cash
author_email = jlcash@gmail.com
description = A package for managing application config through yaml files. Provides dynamically generated wxpython dialog.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamiecash/wxconfig
project_urls =
    Issue Tracker = https://github.com/jamiecash/wxconfig/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
[options]
packages = find:
python_requires = >=3.6